Ensured that popups re-popup when already visible

--- a/src/renderer/components/PopupNotification/PopupNotification.module.scss
+++ b/src/renderer/components/PopupNotification/PopupNotification.module.scss
@@ -26,7 +26,7 @@
         background-color: var(--primary);
     }
 
-    transition: right ease-in-out 300ms;
+    transition: right ease-in-out 150ms;
 
     .title {
         font-weight: 600;
@@ -53,7 +53,10 @@
     }
 
     &.visible {
-        top: 64px !important;
         right: 40px !important;
+    }
+
+    &.hide {
+        right: -100% !important;
     }
 }
